Removed extra space at the bottom of the page and fixed tooltips in the skills section

--- a/frontend_react/src/containers/Skills/Skills.scss
+++ b/frontend_react/src/containers/Skills/Skills.scss
@@ -122,6 +122,7 @@
         color: var(--gray-color);
         margin-top: 5px;
       }
+
     }
   }
   
@@ -140,11 +141,11 @@
   
   .skills-tooltip {
     max-width: 300px !important;
-    background-color: var(--white-color) !important;
+    background-color: var(--gray-color) !important;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.1) !important;
     border-radius: 5px !important;
     padding: 1rem !important;
-    color: var(--gray-color) !important;
+    color: var(--white-color) !important;
     text-align: center !important;
     line-height: 1.5 !important;
     opacity: 1 !important;
