--- a/frontend_react/src/index.css
+++ b/frontend_react/src/index.css
@@ -12,6 +12,10 @@
   --white-color: #ffffff;
 }
 
+html, body {
+  height: 100%;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
